feat(billing): 实现 Plan 与 SKU 订阅履约
完成 SKU 商品模型、会员结账互斥、分段价值、支付回调补偿、AIGC 准入和兑换码接线。

Task: #09916

Task: #09917

Task: #09918

Task: #09919

Task: #09920

Task: #09921

Task: #09922

Task: #09924